# hittools

./: .gitignore  AUTHORS  ChangeLog  README.rst  main.py  requirements.txt  setup.cfg  setup.py
docs/: Makefile  conf.py  fv.rst  index.rst  make.bat  sgs.rst
hit_tools/: __init.py__
hit_tools/constants/: constants.py
hit_tools/data/: data.py
hit_tools/sgs/: sgs.py
hit_tools/velocity/: velocity.py
hittools/constants/: constants.py
hittools/data/: data.py
hittools/dg/: dg.py
hittools/fv/: fv.py
hittools/sgs/: sgs.py
hittools/velocity/: velocity.py
ho-apriori/velocity/: velocity.py
ho_apriori/data/: data.py
ho_apriori/fv/: fv.py
ho_apriori/velocity/: velocity.py
scripts/: cori.batch  ho_study.py  merge_bin.sh  merge_csv.sh  merge_sort_csv.sh  peregrine.pbs  plot_statistics.py  project_fv.py  run.sh  sort_csv.sh  statistics.py  submit.pbs
tests/: test_dg.py  test_fv.py  test_hit_tools.py  test_hittools.py  test_ho_apriori.py  test_sgs.py  test_velocity.py
