[metadata]
name = hit_tools
summary = Tools for manipulating HIT turbulence fields
description-file = README.rst
author = Marc T. Henry de Frahan
author-email = marc.henrydefrahan@nrel.gov
home-page = https://github.com/marchdf/hit_tools
license = Apache 2.0
project_urls =
    Bug Reports = https://github.com/marchdf/hit_tools/issues
    Source Code = https://github.com/marchdf/hit_tools
    Documentation = https://readthedocs.org/projects/hit_tools/badge/?version=latest
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering :: Physics
keywords =
    computational
    fluid
    dynamics
    turbulence

[files]
packages =
    hit_tools

[build_sphinx]
builder = html
source-dir = docs
all_files  = 1
warning-is-error = 1

[bdist_wheel]
universal=1
